--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>NgMarketPlace</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
