--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </body>
 </html>
